--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,12 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# swc
+/input/swc/*
+
+# synlist
+/input/swc/alsynlist/*
+
+# result
+/one_result/*
